trim out not required files